--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,18 @@
-fastapi
-uvicorn
-boto3
-spacy
-tensorflow
-pandas
-scikit-learn
-textblob
-spacytextblob
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+boto3==1.34.0
+spacy==3.7.2
+tensorflow==2.15.0
+pandas==2.1.4
+scikit-learn==1.3.2
+textblob==0.17.1
+spacy-textblob==4.0.0
+python-dotenv==1.0.0
+pydantic[email]==2.5.0
+python-multipart==0.0.6
+aiofiles==23.2.1
+httpx==0.25.2
+redis==5.0.1
+celery==5.3.4
+pytest==7.4.3
+pytest-asyncio==0.21.1
