--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,61 @@
+# Core FastAPI and server
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
+gunicorn==21.2.0
+
+# AWS and cloud services
 boto3==1.34.0
-spacy==3.7.2
+aioboto3==12.1.0
+
+# ML and NLP
 tensorflow==2.15.0
-pandas==2.1.4
+torch==2.1.2
+spacy==3.7.2
 scikit-learn==1.3.2
+transformers==4.36.0
 textblob==0.17.1
 spacy-textblob==4.0.0
+nltk==3.8.1
+
+# Data processing
+pandas==2.1.4
+numpy==1.24.3
+
+# Database and caching
+sqlalchemy==2.0.23
+alembic==1.13.1
+asyncpg==0.29.0
+redis==5.0.1
+
+# Utilities
 python-dotenv==1.0.0
 pydantic[email]==2.5.0
 python-multipart==0.0.6
 aiofiles==23.2.1
 httpx==0.25.2
-redis==5.0.1
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
+# Background tasks
 celery==5.3.4
+flower==2.0.1
+
+# Monitoring and logging
+structlog==23.2.0
+sentry-sdk[fastapi]==1.38.0
+
+# Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
+pytest-mock==3.12.0
+httpx==0.25.2
+
+# Development
+black==23.11.0
+isort==5.12.0
+flake8==6.1.0
+mypy==1.7.1
+
+# Security
+python-jose==3.3.0
+cryptography==41.0.8
