--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,15 +1,19 @@
 {
   "name": "ml-voice-lead-analysis-dashboard",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "test": "jest --passWithNoTests",
+    "test:watch": "jest --watch --passWithNoTests",
+    "test:coverage": "jest --coverage --passWithNoTests",
+    "format": "prettier --write .",
+    "analyze": "cross-env ANALYZE=true next build",
+    "prepare": "husky install"
   },
   "dependencies": {
     "next": "14.0.4",
@@ -25,13 +29,22 @@
     "react-hot-toast": "^2.4.1",
     "framer-motion": "^10.16.5",
     "@headlessui/react": "^1.7.17",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "@heroicons/react": "^2.0.18",
+    "react-hook-form": "^7.48.2",
+    "@hookform/resolvers": "^3.3.2",
+    "yup": "^1.3.3",
+    "react-virtualized": "^9.22.5",
+    "react-intersection-observer": "^9.5.3",
+    "lodash": "^4.17.21",
+    "@types/lodash": "^4.14.202"
   },
   "devDependencies": {
     "typescript": "^5.3.2",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "@types/node": "^20.10.0",
+    "@types/react-virtualized": "^9.21.29",
     "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
@@ -39,12 +52,28 @@
     "eslint-config-next": "14.0.4",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.1.0",
     "jest": "^29.7.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/jest-dom": "^6.1.5"
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/user-event": "^14.5.1",
+    "cross-env": "^7.0.3",
+    "@next/bundle-analyzer": "^14.0.4"
   },
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=9.0.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{md,json}": [
+      "prettier --write"
+    ]
   }
 }
