--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,18 +1,20 @@
+# Backend Environment Variables
+ENVIRONMENT=development
+DEBUG=true
+HOST=0.0.0.0
+PORT=8000
+
 # AWS Configuration
+DATA_BUCKET=ml-voice-analysis-dev
 AWS_REGION=us-east-1
-DATA_BUCKET=your-ml-pipeline-bucket
 AWS_ACCESS_KEY_ID=your_access_key
 AWS_SECRET_ACCESS_KEY=your_secret_key
 
-# Application Settings
-ENVIRONMENT=development
-API_VERSION=v1
+# Database
+DATABASE_URL=postgresql+asyncpg://voice_user:voice_pass@localhost:5432/voice_analysis
 
-# Database (if using)
-DATABASE_URL=postgresql://user:password@localhost:5432/voice_analysis
-
-# Redis (for caching)
-REDIS_URL=redis://localhost:6379
+# Redis
+REDIS_URL=redis://localhost:6379/0
 
 # Security
-SECRET_KEY=your-super-secret-key-here
+SECRET_KEY=your-super-secret-key-change-in-production-very-long-and-random
