--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,61 +1,90 @@
-# Core FastAPI and server
+# Core FastAPI and ASGI server
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 gunicorn==21.2.0
 
-# AWS and cloud services
+# AWS and cloud services (updated for better compatibility)
 boto3==1.34.0
 aioboto3==12.1.0
+botocore==1.34.0
 
-# ML and NLP
+# ML and NLP libraries (optimized versions)
 tensorflow==2.15.0
 torch==2.1.2
+torchvision==0.16.2
 spacy==3.7.2
 scikit-learn==1.3.2
 transformers==4.36.0
 textblob==0.17.1
-spacy-textblob==4.0.0
 nltk==3.8.1
-
-# Data processing
-pandas==2.1.4
 numpy==1.24.3
 
-# Database and caching
+# Data processing and analysis
+pandas==2.1.4
+numpy==1.24.3
+scipy==1.11.4
+
+# Database and async support (modernized)
 sqlalchemy==2.0.23
 alembic==1.13.1
+aiosqlite==0.19.0
 asyncpg==0.29.0
-redis==5.0.1
 
-# Utilities
+# Caching and session management
+redis==5.0.1
+aioredis==2.0.1
+
+# HTTP client and async utilities
+httpx==0.25.2
+aiofiles==23.2.1
+aiohttp==3.9.0
+
+# Configuration and environment
 python-dotenv==1.0.0
 pydantic[email]==2.5.0
 python-multipart==0.0.6
-aiofiles==23.2.1
-httpx==0.25.2
+
+# Security and authentication
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
+cryptography==41.0.8
 
-# Background tasks
+# Background tasks and job processing
 celery==5.3.4
 flower==2.0.1
 
-# Monitoring and logging
+# Logging and monitoring
 structlog==23.2.0
 sentry-sdk[fastapi]==1.38.0
+prometheus-client==0.19.0
 
-# Testing
+# Testing framework
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-mock==3.12.0
-httpx==0.25.2
+pytest-cov==4.1.0
+factory-boy==3.3.0
 
-# Development
+# Development tools
 black==23.11.0
 isort==5.12.0
 flake8==6.1.0
 mypy==1.7.1
+pre-commit==3.5.0
 
-# Security
-python-jose==3.3.0
-cryptography==41.0.8
+# Performance and optimization
+orjson==3.9.10
+typing-extensions==4.8.0
+
+# Cloud deployment compatibility
+psutil==5.9.6
+setproctitle==1.3.3
+
+# Additional NLP utilities
+wordcloud==1.9.2
+matplotlib==3.8.2
+seaborn==0.13.0
+
+# API documentation enhancements
+fastapi-limiter==0.1.5
+fastapi-cache2==0.2.1
