--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ml-voice-lead-analysis-dashboard",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -13,7 +13,9 @@
     "test:coverage": "jest --coverage --passWithNoTests",
     "format": "prettier --write .",
     "analyze": "cross-env ANALYZE=true next build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "preview": "next build && next start",
+    "export": "next build && next export"
   },
   "dependencies": {
     "next": "14.0.4",
@@ -33,11 +35,22 @@
     "@heroicons/react": "^2.0.18",
     "react-hook-form": "^7.48.2",
     "@hookform/resolvers": "^3.3.2",
-    "yup": "^1.3.3",
+    "zod": "^3.22.4",
     "react-virtualized": "^9.22.5",
     "react-intersection-observer": "^9.5.3",
     "lodash": "^4.17.21",
-    "@types/lodash": "^4.14.202"
+    "@types/lodash": "^4.14.202",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "react-error-boundary": "^4.0.11",
+    "swr": "^2.2.4",
+    "usehooks-ts": "^2.9.1",
+    "react-loading-skeleton": "^3.3.1",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0"
   },
   "devDependencies": {
     "typescript": "^5.3.2",
@@ -61,7 +74,9 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/user-event": "^14.5.1",
     "cross-env": "^7.0.3",
-    "@next/bundle-analyzer": "^14.0.4"
+    "@next/bundle-analyzer": "^14.0.4",
+    "jest-environment-jsdom": "^29.7.0",
+    "@types/jest": "^29.5.8"
   },
   "engines": {
     "node": ">=18.0.0",
@@ -72,8 +87,20 @@
       "eslint --fix",
       "prettier --write"
     ],
-    "*.{md,json}": [
+    "*.{md,json,css}": [
       "prettier --write"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ]
   }
 }
