feat: enhance environment configuration with comprehensive deployment settings

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,20 +1,77 @@
-# Backend Environment Variables
+# ML Voice Lead Analysis - Environment Configuration
+# Copy this file to .env and customize values for your deployment
+
+# Application Settings
 ENVIRONMENT=development
 DEBUG=true
 HOST=0.0.0.0
 PORT=8000
 
 # AWS Configuration
-DATA_BUCKET=ml-voice-analysis-dev
 AWS_REGION=us-east-1
-AWS_ACCESS_KEY_ID=your_access_key
-AWS_SECRET_ACCESS_KEY=your_secret_key
+DATA_BUCKET=ml-voice-analysis-data
+S3_BUCKET_NAME=ml-voice-analysis-data
+AWS_ACCESS_KEY_ID=your_aws_access_key_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
 
-# Database
-DATABASE_URL=postgresql+asyncpg://voice_user:voice_pass@localhost:5432/voice_analysis
+# Database Configuration
+# SQLite (Development)
+DATABASE_URL=sqlite+aiosqlite:///./voice_analysis.db
+# PostgreSQL (Production)
+# DATABASE_URL=postgresql+asyncpg://voice_user:voice_password@localhost:5432/voice_analysis
 
-# Redis
+# Redis Cache (Optional)
 REDIS_URL=redis://localhost:6379/0
 
-# Security
-SECRET_KEY=your-super-secret-key-change-in-production-very-long-and-random
+# Security Configuration
+SECRET_KEY=your-super-secret-key-change-in-production-minimum-32-characters
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# ML Pipeline Configuration
+USE_TRANSFORMERS=false
+LIGHTWEIGHT_MODELS_ONLY=true
+CLOUD_DEPLOYMENT=false
+
+# Performance Settings
+WORKERS=2
+MAX_CONCURRENT_REQUESTS=100
+REQUEST_TIMEOUT_SECONDS=30
+
+# Feature Flags
+ENABLE_ADVANCED_SENTIMENT=true
+ENABLE_TOPIC_MODELING=true
+ENABLE_SPEAKER_ANALYSIS=true
+ENABLE_EMOTION_DETECTION=false
+
+# Logging and Monitoring
+LOG_LEVEL=INFO
+ENABLE_STRUCTURED_LOGGING=true
+SENTRY_DSN=your_sentry_dsn_here_for_error_tracking
+
+# CORS Configuration
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001,https://*.vercel.app
+
+# Cloud Platform Specific
+# Vercel
+VERCEL=false
+VERCEL_URL=
+
+# Render
+RENDER=false
+RENDER_EXTERNAL_URL=
+
+# Railway
+RAILWAY_ENVIRONMENT=
+RAILWAY_PROJECT_ID=
+
+# Heroku
+DYNO=
+HEROKU_APP_NAME=
+
+# AWS Lambda
+AWS_LAMBDA_FUNCTION_NAME=
+AWS_EXECUTION_ENV=
+
+# Docker Configuration
+DOCKER_ENV=false
+CONTAINER_NAME=ml-voice-backend
