--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,61 +1,73 @@
-# Core FastAPI and server
-fastapi==0.104.1
+# Core API Framework
+fastapi==0.105.0
 uvicorn[standard]==0.24.0
 gunicorn==21.2.0
+python-multipart==0.0.6
 
-# AWS and cloud services
-boto3==1.34.0
-aioboto3==12.1.0
+# Cloud Services and Storage  
+boto3==1.34.20
+aioboto3==12.3.0
 
-# ML and NLP
-tensorflow==2.15.0
-torch==2.1.2
+# Machine Learning and NLP
 spacy==3.7.2
 scikit-learn==1.3.2
-transformers==4.36.0
 textblob==0.17.1
-spacy-textblob==4.0.0
 nltk==3.8.1
+transformers==4.36.2
 
-# Data processing
+# Data Processing
 pandas==2.1.4
-numpy==1.24.3
+numpy==1.24.4
 
-# Database and caching
-sqlalchemy==2.0.23
-alembic==1.13.1
-asyncpg==0.29.0
+# Database and Async Support
+sqlalchemy[asyncio]==2.0.23
+aiopg==1.4.0
+psycopg2-binary==2.9.9
+
+# Caching and Session Management
 redis==5.0.1
+aioredis==2.0.1
 
-# Utilities
+# Environment and Configuration
 python-dotenv==1.0.0
-pydantic[email]==2.5.0
-python-multipart==0.0.6
+pydantic[email]==2.5.2
+pydantic-settings==2.1.0
+
+# File Handling and I/O
 aiofiles==23.2.1
+
+# HTTP Client
 httpx==0.25.2
-python-jose[cryptography]==3.3.0
+
+# Security and Authentication
+cryptography==41.0.8
 passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
 
-# Background tasks
-celery==5.3.4
-flower==2.0.1
-
-# Monitoring and logging
+# Logging and Monitoring
 structlog==23.2.0
 sentry-sdk[fastapi]==1.38.0
 
-# Testing
+# Background Processing
+celery[redis]==5.3.4
+
+# Development and Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
-pytest-mock==3.12.0
+pytest-cov==4.1.0
 httpx==0.25.2
 
-# Development
-black==23.11.0
+# Code Quality
+black==23.12.0
 isort==5.12.0
 flake8==6.1.0
 mypy==1.7.1
 
-# Security
-python-jose==3.3.0
-cryptography==41.0.8
+# Production WSGI/ASGI Servers
+gunicorn==21.2.0
+uvicorn[standard]==0.24.0
+
+# Additional Utilities
+python-slugify==8.0.1
+click==8.1.7
+rich==13.7.0
