--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,90 +1,73 @@
-# Core FastAPI and ASGI server
-fastapi==0.104.1
+# Core API Framework
+fastapi==0.105.0
 uvicorn[standard]==0.24.0
 gunicorn==21.2.0
+python-multipart==0.0.6
 
-# AWS and cloud services (updated for better compatibility)
-boto3==1.34.0
-aioboto3==12.1.0
-botocore==1.34.0
+# Cloud Services and Storage  
+boto3==1.34.20
+aioboto3==12.3.0
 
-# ML and NLP libraries (optimized versions)
-tensorflow==2.15.0
-torch==2.1.2
-torchvision==0.16.2
+# Machine Learning and NLP
 spacy==3.7.2
 scikit-learn==1.3.2
-transformers==4.36.0
 textblob==0.17.1
 nltk==3.8.1
-numpy==1.24.3
+transformers==4.36.2
 
-# Data processing and analysis
+# Data Processing
 pandas==2.1.4
-numpy==1.24.3
-scipy==1.11.4
+numpy==1.24.4
 
-# Database and async support (modernized)
-sqlalchemy==2.0.23
-alembic==1.13.1
-aiosqlite==0.19.0
-asyncpg==0.29.0
+# Database and Async Support
+sqlalchemy[asyncio]==2.0.23
+aiopg==1.4.0
+psycopg2-binary==2.9.9
 
-# Caching and session management
+# Caching and Session Management
 redis==5.0.1
 aioredis==2.0.1
 
-# HTTP client and async utilities
-httpx==0.25.2
-aiofiles==23.2.1
-aiohttp==3.9.0
-
-# Configuration and environment
+# Environment and Configuration
 python-dotenv==1.0.0
-pydantic[email]==2.5.0
-python-multipart==0.0.6
+pydantic[email]==2.5.2
+pydantic-settings==2.1.0
 
-# Security and authentication
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
+# File Handling and I/O
+aiofiles==23.2.1
+
+# HTTP Client
+httpx==0.25.2
+
+# Security and Authentication
 cryptography==41.0.8
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
 
-# Background tasks and job processing
-celery==5.3.4
-flower==2.0.1
-
-# Logging and monitoring
+# Logging and Monitoring
 structlog==23.2.0
 sentry-sdk[fastapi]==1.38.0
-prometheus-client==0.19.0
 
-# Testing framework
+# Background Processing
+celery[redis]==5.3.4
+
+# Development and Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
-pytest-mock==3.12.0
 pytest-cov==4.1.0
-factory-boy==3.3.0
+httpx==0.25.2
 
-# Development tools
-black==23.11.0
+# Code Quality
+black==23.12.0
 isort==5.12.0
 flake8==6.1.0
 mypy==1.7.1
-pre-commit==3.5.0
 
-# Performance and optimization
-orjson==3.9.10
-typing-extensions==4.8.0
+# Production WSGI/ASGI Servers
+gunicorn==21.2.0
+uvicorn[standard]==0.24.0
 
-# Cloud deployment compatibility
-psutil==5.9.6
-setproctitle==1.3.3
-
-# Additional NLP utilities
-wordcloud==1.9.2
-matplotlib==3.8.2
-seaborn==0.13.0
-
-# API documentation enhancements
-fastapi-limiter==0.1.5
-fastapi-cache2==0.2.1
+# Additional Utilities
+python-slugify==8.0.1
+click==8.1.7
+rich==13.7.0
