--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,73 +1,72 @@
 # Core API Framework
-fastapi==0.105.0
-uvicorn[standard]==0.24.0
-gunicorn==21.2.0
-python-multipart==0.0.6
+fastapi==0.115.5
+uvicorn[standard]==0.32.1
+gunicorn==23.0.0
+python-multipart==0.0.20
 
 # Cloud Services and Storage  
-boto3==1.34.20
-aioboto3==12.3.0
+boto3==1.35.71
+aioboto3==13.3.0
 
 # Machine Learning and NLP
-spacy==3.7.2
-scikit-learn==1.3.2
-textblob==0.17.1
-nltk==3.8.1
-transformers==4.36.2
+spacy==3.8.2
+scikit-learn==1.5.2
+textblob==0.18.0.post0
+nltk==3.9.1
+transformers==4.46.3
+torch==2.5.1
 
 # Data Processing
-pandas==2.1.4
-numpy==1.24.4
+pandas==2.2.3
+numpy==1.26.4
 
 # Database and Async Support
-sqlalchemy[asyncio]==2.0.23
+sqlalchemy[asyncio]==2.0.36
 aiopg==1.4.0
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.10
 
 # Caching and Session Management
-redis==5.0.1
-aioredis==2.0.1
+# Note: aioredis is deprecated, redis>=5.0 includes async support
+redis==5.2.0
 
 # Environment and Configuration
-python-dotenv==1.0.0
-pydantic[email]==2.5.2
-pydantic-settings==2.1.0
+python-dotenv==1.0.1
+pydantic[email]==2.9.2
+pydantic-settings==2.6.1
 
 # File Handling and I/O
-aiofiles==23.2.1
+aiofiles==24.1.0
 
 # HTTP Client
-httpx==0.25.2
+httpx==0.27.2
 
 # Security and Authentication
-cryptography==41.0.8
+cryptography==43.0.3
 passlib[bcrypt]==1.7.4
 python-jose[cryptography]==3.3.0
 
 # Logging and Monitoring
-structlog==23.2.0
-sentry-sdk[fastapi]==1.38.0
+structlog==24.4.0
+sentry-sdk[fastapi]==2.18.0
 
 # Background Processing
-celery[redis]==5.3.4
+celery[redis]==5.4.0
 
 # Development and Testing
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-cov==4.1.0
-httpx==0.25.2
+pytest==8.3.4
+pytest-asyncio==0.24.0
+pytest-cov==6.0.0
 
 # Code Quality
-black==23.12.0
-isort==5.12.0
-flake8==6.1.0
-mypy==1.7.1
+black==24.10.0
+isort==5.13.2
+flake8==7.1.1
+mypy==1.13.0
 
-# Production WSGI/ASGI Servers
-gunicorn==21.2.0
-uvicorn[standard]==0.24.0
+# Production WSGI/ASGI Servers (duplicates removed)
+# Already listed above
 
 # Additional Utilities
-python-slugify==8.0.1
+python-slugify==8.0.4
 click==8.1.7
-rich==13.7.0
+rich==13.9.4
